--- a/404.html
+++ b/404.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Asegura que la página sea responsive en dispositivos móviles -->
     <title>Error 404 - Página no encontrada</title> <!-- Título de la pestaña del navegador -->
     <link rel="stylesheet" href="./css/index.css"> <!-- Enlace a la hoja de estilos principal -->
+     <!-- Favicon -->
+     <link rel="icon" type="image/png" sizes="96x96" href="https://ik.imagekit.io/Silver11/Trabajo%20web/favicon-96x96.png?updatedAt=1736285277849">
     <style>
-        /* Importar tipografía local */
-        @font-face {
-            font-family: 'RacingSansOne';
-            src: url('./assets/fonts/RacingSansOne-Regular.woff2') format('woff2');
-            font-weight: normal;
-            font-style: normal;
-        }
+       
 
         /* Estilos específicos para la página de error 404 */
 
@@ -54,6 +50,7 @@
             text-decoration: none; /* Elimina el subrayado al pasar el cursor */
         }
     </style>
+
 </head>
 <body>
     <div class="error-container">
