--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- Navegación principal -->
             <nav class="navigation">
                 <ul>
-                    <li><a href="#">Información</a></li> <!-- Enlace a la sección de información -->
+                    <li><a href="404.html">Información</a></li> <!-- Enlace a la sección de información -->
                     <li><a href="store.html">Tienda</a></li> <!-- Enlace a la tienda -->
                 </ul>
             </nav>
@@ -43,6 +43,24 @@
         <div class="text-container">
             <p>¡Vive la emoción del regreso de la Fórmula 1 a Madrid! Nuestro ambicioso Gran Premio, destinado a ser líder en el Calendario Internacional, está diseñado para cautivar tanto a aficionados como a equipos.</p>
             <p>Sumérgete en la fusión perfecta de deporte y espectáculo, donde cada momento es inolvidable. ¡Prepárate para vivir la adrenalina renovada de la F1 en la capital!</p>
+        </div>
+    </section>
+
+      <!-- Nueva sección de imagen y texto -->
+      <section class="image-text-section-2">
+        <!-- Imagen en la segunda columna -->
+        <div class="image-container-2">
+            <img src="assets\images\imagen f1 3.jpg" alt="Ejemplo de imagen">
+        </div>
+        <!-- Texto en la tercera columna -->
+        <div class="text-container-2">
+            <p class="highlight-text">PRÓXIMAMENTE</p>
+            <p>
+                Descubre mas información y todos los secretos y detalles siguiendonos en nuestras redes sociales y mantente al día de cualquier novedad.
+            </p>
+            <p>
+                ¡Sé el primero en enterarte de todo!
+            </p>
         </div>
     </section>
 
