--- a/404.html
+++ b/404.html
@@ -10,9 +10,11 @@
 </head>
 <body class="error-body"> <!-- Clase exclusiva para el body de la página 404 -->
     <div class="error-container"> <!-- Contenedor principal para los elementos del error -->
-        <h1 class="error-title">404</h1> <!-- Título del error con estilo único -->
-        <p class="error-message">Lo sentimos, la página que buscas no existe.</p> <!-- Mensaje descriptivo -->
-        <p><a href="index.html" class="error-link">Volver a la página principal</a></p> <!-- Enlace para regresar al inicio -->
+        <div class="error-box"> <!-- Caja de contenido central -->
+            <h1 class="error-title">404</h1> <!-- Título del error -->
+            <p class="error-message">Lo sentimos, la página que buscas no existe.</p> <!-- Mensaje descriptivo -->
+            <p><a href="index.html" class="error-link">Volver a la página principal</a></p> <!-- Enlace para regresar al inicio -->
+        </div>
     </div>
 </body>
 </html>
