--- a/index.html
+++ b/index.html
@@ -7,56 +7,56 @@
     <title>Circuito F1 Madrid</title> <!-- Título de la pestaña del navegador -->
 
     <!-- Fuentes y estilos -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css"> <!-- Archivo de estilos principal -->   
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Fuente desde Google Fonts -->
+    <link rel="stylesheet" href="./css/index.css"> <!-- Archivo de estilos principal -->
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="96x96" href="https://ik.imagekit.io/Silver11/Trabajo%20web/favicon-96x96.png?updatedAt=1736285277849">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://ik.imagekit.io/Silver11/Trabajo%20web/favicon-96x96.png?updatedAt=1736285277849"> <!-- Icono para la pestaña del navegador -->
 </head>
 <body>
     <!-- Encabezado -->
     <header class="header">
-        <div class="header-container">
+        <div class="header-container"> <!-- Contenedor para organizar logo y navegación -->
             <!-- Logo con enlace a la página de inicio -->
             <div class="logo">
-                <a href="index.html">
-                    <img src="https://ik.imagekit.io/Silver11/Trabajo%20web/logo%20f1%20espa%C3%B1a.png?updatedAt=1736285277980" alt="Logo del Circuito">
+                <a href="index.html"> <!-- Enlace que lleva a la página principal -->
+                    <img src="https://ik.imagekit.io/Silver11/Trabajo%20web/logo%20f1%20espa%C3%B1a.png?updatedAt=1736285277980" alt="Logo del Circuito"> <!-- Logo del circuito -->
                 </a>
             </div>
             <!-- Navegación principal -->
             <nav class="navigation">
-                <ul>
+                <ul> <!-- Lista de enlaces de navegación -->
                     <li><a href="404.html">Información</a></li> <!-- Enlace a la sección de información -->
-                    <li><a href="store.html">Tienda</a></li> <!-- Enlace a la tienda -->
+                    <li><a href="store.html">Tienda</a></li> <!-- Enlace a la página de tienda -->
                 </ul>
             </nav>
         </div>
     </header>
 
     <!-- Imagen principal -->
-    <section class="main-image">
-        <img src="https://ik.imagekit.io/Silver11/Trabajo%20web/circuito%20madrid.jpeg?updatedAt=1736285277979" alt="Imagen del circuito de Madrid">
+    <section class="main-image"> <!-- Sección que contiene la imagen destacada -->
+        <img src="https://ik.imagekit.io/Silver11/Trabajo%20web/file.jpg?updatedAt=1736372815709" alt="Imagen del circuito de Madrid"> <!-- Imagen principal del circuito -->
     </section>
 
     <!-- Texto principal -->
     <section class="main-text">
-        <div class="text-container">
+        <div class="text-container"> <!-- Contenedor para el texto principal -->
             <p>¡Vive la emoción del regreso de la Fórmula 1 a Madrid! Nuestro ambicioso Gran Premio, destinado a ser líder en el Calendario Internacional, está diseñado para cautivar tanto a aficionados como a equipos.</p>
             <p>Sumérgete en la fusión perfecta de deporte y espectáculo, donde cada momento es inolvidable. ¡Prepárate para vivir la adrenalina renovada de la F1 en la capital!</p>
         </div>
     </section>
 
-      <!-- Nueva sección de imagen y texto -->
-      <section class="image-text-section-2">
+    <!-- Nueva sección de imagen y texto -->
+    <section class="image-text-section-2"> <!-- Sección que combina una imagen y texto -->
         <!-- Imagen en la segunda columna -->
-        <div class="image-container-2">
-            <img src="assets\images\imagen f1 3.jpg" alt="Ejemplo de imagen">
+        <div class="image-container-2"> <!-- Contenedor para la imagen -->
+            <img src="https://ik.imagekit.io/Silver11/Trabajo%20web/imagen%20f1%203.jpg?updatedAt=1736353470589" alt="Ejemplo de imagen"> <!-- Imagen representativa -->
         </div>
         <!-- Texto en la tercera columna -->
-        <div class="text-container-2">
-            <p class="highlight-text">PRÓXIMAMENTE</p>
+        <div class="text-container-2"> <!-- Contenedor para el texto -->
+            <p class="highlight-text">PRÓXIMAMENTE</p> <!-- Texto destacado con clase específica -->
             <p>
-                Descubre mas información y todos los secretos y detalles siguiendonos en nuestras redes sociales y mantente al día de cualquier novedad.
+                Descubre más información y todos los secretos y detalles siguiéndonos en nuestras redes sociales y mantente al día de cualquier novedad.
             </p>
             <p>
                 ¡Sé el primero en enterarte de todo!
@@ -66,7 +66,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <p>&copy; 2025 Circuito F1 Madrid. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Circuito F1 Madrid. Todos los derechos reservados.</p> <!-- Información de derechos de autor -->
     </footer>
 </body>
 </html>
